--- a/localisation/english/focus_l_english.yml
+++ b/localisation/english/focus_l_english.yml
@@ -382,6 +382,28 @@
  GER_invite_anzio1_desc:0 "Anzio isn’t the best partner by any stretch of the imagination, being considered by many as a joke when it proclaims itself a European power, while this delusion does go deep, having this nation alongside us would make controlling it far easier and make the chance it decides to invade anyone less likely."
  GER_invite_northern_gang:0 "The Northern Lights"
  GER_invite_northern_gang_desc:0 "The Scandinavian countries to our north all have different reasons for why they may not wish to join, Viking and Viggen both have already stable economies and non predatory members surrounding them, the sales pitch to them may be far more different then the others."
+ GER_free_market:0 "Kuromorimine Access Market"
+ GER_free_market_desc:0 "Kuromorimine's market has been restricted and closed off as we can't use our funds to export the supplies everyone wants and get the supplies we need. It's time we tear down the trade barriers of the past."
+ GER_expand_civil_rights:0 "Expand the Rights of Students"
+ GER_expand_civil_rights_desc:0 "Kuromorimine has held a prestigeous class of students with German Speakers being among the highest. Other people who had been sent here before don't get recognized for their talents due to this structure. Great minds are welcomed to Kuromorimine."
+ GER_economy_experts:0 "Hire Economic Experts"
+ GER_economy_experts_desc:0 "With the economy growing more complex, we need more people to help crunch the numbers to help with growth and to avoid economic slow downs and stagnation We should try making more changes to adapt to this ever changing world."
+ GER_liberalize_economy:0 "Open Economy"
+ GER_liberalize_economy_desc:0 "We should try making the market fairer to everyone even if they don't have money. Goods and services should also be allowed for people to engage with the economy and not have money stand in the way."
+ GER_stable_currency:0 "Establish the Kuro-Mark"
+ GER_stable_currency_desc:0 "Kuromorimine needs its own national currency and a stable one too. It should allow students to be able to access the supplies needed for day to day life and with the new experts we shall maximize the growth while remaining balanced."
+ GER_soviet_threat:0 "The Pravdan Bear"
+ GER_soviet_threat_desc:0 "Pravda is a threat to all of the East and western nations, its corruption cannot be allowed to spread. The Baltics, Jatkosota, Bonple, and Count all know that if they do nothing Pravda will seek to conquer them all, we must make upmost haste to prevent this inevitability."
+ GER_protect_baltics:0 "Secure Baltic Security"
+ GER_protect_baltics_desc:0 "The Baltic states are the most vulnerable to soviet plans, both Lithuania and Estonia are diplomatically isolated, and whilst Latvia has good relations with Bonple, they will likely be unable to count on them to defend them completely, this is our moment to step in and fill the gaps left by the western allies, by ensuring their independence."
+ GER_protect_poland:0 "Protect the Boar"
+ GER_protect_poland_desc:0 "Bonple is a major player in the east, having a sizeable population, and being a major check against Pravdan power, if we do nothing they could very well be simply overrun with enough time, we must give them the utmost support if we are to ensure they remain more than a puppet of Pravda."
+ GER_rally_west:0 "Rally Anti-Pravdan sentiment in the West"
+ GER_rally_west_desc:0 "Only by presenting a unified front to the Pravdan menace can we hope to survive, we need the west to back our motions into Pravda or we could very well be partitioned between the two, a unacceptable occurrence"
+ GER_lend_lease:0 "Supporting the Winter War"
+ GER_lend_lease_desc:0 "Pravda will not stop with Jatkosota, it will continue its mission to conquer all around it, we must do all we can to stop this eventuality, we must give them every thing they need to hold out against the Pravdan bastards until we are ready for war."
+ GER_final_showdown:0 "Operation Befreiung"
+ GER_final_showdown_desc:0 "The time has come, the liberation of Eastern Europe and the peoples of Pravda is upon us, in time they will come to their senses and we shall see them freed of their slavery, let us hope that we are strong enough to overcome this great test of Democracy against the evil that is Communsim!"
  SOV_BULWARK_NAME_COMMUNIST:0 "Bulwark Against Bolshevism"
  SOV_BULWARK_NAME_FASCISM:0 "Fortress Against Fascism"
  SOV_BULWARK_NAME_NEUTRALITY:0 "Redoubt Against Russia"
