some more fixes to localization

--- a/localisation/english/focus_l_english.yml
+++ b/localisation/english/focus_l_english.yml
@@ -699,7 +699,7 @@
  SOV_claim_on_sinkiang_desc:0 "Under Comrade Sheng Shicai's rule, Sinkiang is already a virtual Soviet puppet state. We should make it official..."
  SOV_claim_on_sinkiang_threat:0 "Soviet Claimed Sinkiang"
  SOV_pan_slavic_rhetoric:0 "Pan-Slavic Rhetoric"
- SOV_pan_slavic_rhetoric_desc:0 "Comrade Nonna went too far in his abandonment of a Russian, Slavic identity in his pursuit of World Revolution. A certain degree of nationalism should serve us well, and a revival of a kind of Pan-Slavism might help bring us closer to the other Slavic nations."
+ SOV_pan_slavic_rhetoric_desc:0 "Comrade Ekaterina went too far in her abandonment of a Pravda, Slavic identity in her pursuit of World Revolution. A certain degree of nationalism should serve us well, and a revival of a kind of Pan-Slavism might help bring us closer to the other Slavic nations."
  SOV_claims_on_baltic:0 "Claims in Baltic"
  SOV_claims_on_baltic_desc:0 "Peter the Great was right in seeking access to ports in the west. The Baltic States, which were lost after the revolution, should be reintegrated into Pravda."
  SOV_claim_bessarabia:0 "Claim on Bessarabia"
@@ -877,8 +877,8 @@
  bomber_command_focus_desc:0 "Like Giulio Douhet always said; 'The bomber will always get through!'. Advances in radar technology and anti-air defenses notwithstanding, we should prioritize the development of better bombers."
  coastal_command_focus:0 "Coastal Command"
  coastal_command_focus_desc:1 "[Root.GetCoastalCommandDesc]"
- ENG_COASTAL_COMMAND_DESC_HISTORICAL:0 "Our industry is driven by resources shipped to Britain from many distant parts of the Empire. Our convoys are our lifeblood and must be protected by both the Royal Navy and the Royal Air Force. We should set up a special RAF formation to protect the approaches to our ports!"
- ENG_COASTAL_COMMAND_DESC_COMMUNIST:0 "Our industry is driven by resources shipped to Britain from many distant parts of the Empire. Our convoys are our lifeblood and must be protected by both the Workers' Liberation Navy and the People's Air Force. We should set up a special PAF formation to protect the approaches to our ports!"
+ ENG_COASTAL_COMMAND_DESC_HISTORICAL:0 "Our industry is driven by resources shipped to St Gloriana from many distant parts of the Empire. Our convoys are our lifeblood and must be protected by both the Royal Navy and the Royal Air Force. We should set up a special RAF formation to protect the approaches to our ports!"
+ ENG_COASTAL_COMMAND_DESC_COMMUNIST:0 "Our industry is driven by resources shipped to St Gloriana from many distant parts of the Empire. Our convoys are our lifeblood and must be protected by both the Workers' Liberation Navy and the People's Air Force. We should set up a special PAF formation to protect the approaches to our ports!"
  aircraft_production_focus:0 "Aircraft Production Group"
  aircraft_production_focus_desc:0 "Aircraft production remains our highest priority. The London Aircraft Production Group (LAPG) should be created to manage and coordinate all available aircraft related production."
  uk_jet_focus:0 "Jet Aircraft"
