--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -5,19 +5,19 @@
  GER_democratic_DEF:0 "Kuromorimine Girls Academy"
  GER_neutrality:0 "Kuromorimine Empire"
  GER_neutrality_DEF:0 "The Kuromorimine Empire"
- GER_communism:0 "Kuromorimine"
- GER_communism_DEF:0 "Kuromorimine Girls Academy"
+ GER_communism:0 "Bellwall Academy"
+ GER_communism_DEF:0 "Bellwall Girls Academy"
  GER_fascism_ADJ:0 "Kuromorimine"
  GER_democratic_ADJ:0 "Kuromorimine"
  GER_neutrality_ADJ:0 "Kuromorimine"
  GER_communism_ADJ:0 "Kuromorimine"
  GER_autonomy_supervised_state:0 "$OVERLORDADJ$ Occupation Zone"
  GER_autonomy_supervised_state_DEF:0 "the $OVERLORDADJ$ Occupation Zone"
- GER_autonomy_puppet:0 "$OVERLORDADJ$ Germany"
- GER_autonomy_puppet_DEF:0 "$OVERLORDADJ$ Germany"
- GER_SOV_communism_autonomy_puppet:0 "$OVERLORDADJ$ Occupation Zone of Germany"
- GER_SOV_communism_autonomy_puppet_DEF:0 "the $OVERLORDADJ$ Occupation Zone of Germany"
- GER_SOV_communism_autonomy_puppet_ADJ:0 "$OVERLORDADJ$ German"
+ GER_autonomy_puppet:0 "$OVERLORDADJ$ Kuromorimine"
+ GER_autonomy_puppet_DEF:0 "$OVERLORDADJ$ Kuromorimine"
+ GER_SOV_communism_autonomy_puppet:0 "$OVERLORDADJ$ Occupation Zone of Bellwall"
+ GER_SOV_communism_autonomy_puppet_DEF:0 "the $OVERLORDADJ$ Occupation Zone of Bellwall"
+ GER_SOV_communism_autonomy_puppet_ADJ:0 "$OVERLORDADJ$ Bellwall"
  GER:0 "Kuromorimine"
  GER_DEF:0 "Kuromorimine"
  GER_ADJ:0 "Kuromorimine"
@@ -27,8 +27,8 @@
  ENG_democratic_DEF:0 "St. Gloriana"
  ENG_neutrality:0 "St. Gloriana"
  ENG_neutrality_DEF:0 "the St. Gloriana"
- ENG_communism:0 "St. Gloriana"
- ENG_communism_DEF:0 "St. Gloriana"
+ ENG_communism:0 "Peoples Republic of Gloriana"
+ ENG_communism_DEF:0 "Peoples Republic of Gloriana"
  ENG_fascism_ADJ:0 "Gloriana"
  ENG_democratic_ADJ:0 "Gloriana"
  ENG_neutrality_ADJ:0 "Gloriana"
@@ -36,16 +36,16 @@
  ENG:0 "St. Gloriana"
  ENG_DEF:0 "St. Gloriana"
  ENG_ADJ:0 "Gloriana"
- ENG_democratic_subject:0 "$OVERLORDADJ$ Britain"
- ENG_democratic_subject_DEF:0 "$OVERLORDADJ$ Britain"
- ENG_neutrality_subject:0 "$OVERLORDADJ$ Britain"
- ENG_neutrality_subject_DEF:0 "$OVERLORDADJ$ Britain"
- ENG_fascism_subject:0 "$OVERLORDADJ$ Protectorate of Britain"
- ENG_fascism_subject_DEF:0 "the $OVERLORDADJ$ Protectorate of Britain"
- ENG_communism_subject:0 "Socialist Republic of Great Britain"
- ENG_communism_subject_DEF:0 "the Socialist Republic of Great Britain"
- ENG_SOV_communism_subject:0 "British Soviet Socialist Republic"
- ENG_SOV_communism_subject_DEF:0 "the British Soviet Socialist Republic"
+ ENG_democratic_subject:0 "$OVERLORDADJ$ St. Gloriana"
+ ENG_democratic_subject_DEF:0 "$OVERLORDADJ$ St. Gloriana"
+ ENG_neutrality_subject:0 "$OVERLORDADJ$ St. Gloriana"
+ ENG_neutrality_subject_DEF:0 "$OVERLORDADJ$ St. Gloriana"
+ ENG_fascism_subject:0 "$OVERLORDADJ$ Protectorate of St. Gloriana"
+ ENG_fascism_subject_DEF:0 "the $OVERLORDADJ$ Protectorate of St. Gloriana"
+ ENG_communism_subject:0 "Socialist Republic of Gloriana"
+ ENG_communism_subject_DEF:0 "the Socialist Republic of Gloriana"
+ ENG_SOV_communism_subject:0 "Gloriana Soviet Socialist Republic"
+ ENG_SOV_communism_subject_DEF:0 "the Gloriana Soviet Socialist Republic"
  SOV_fascism:0 "Pravda"
  SOV_fascism_DEF:0 "Pravda"
  SOV_democratic:0 "Pravda"
@@ -58,79 +58,79 @@
  SOV_democratic_ADJ:0 "Pravdaist"
  SOV_neutrality_ADJ:0 "Pravdaist"
  SOV_communism_ADJ:0 "Pravdaist"
- SOV_autonomy_dominion:0 "Russian Dominion"
- SOV_autonomy_dominion_DEF:0 "the Russian Dominion"
- SOV_autonomy_colony:0 "$OVERLORDADJ$ Russia"
- SOV_autonomy_colony_DEF:0 "the $OVERLORDADJ$ Russia"
- SOV_autonomy_integrated_puppet:0 "Russian Protectorate"
- SOV_autonomy_integrated_puppet_DEF:0 "the Russian Protectorate"
- SOV_autonomy_puppet:0 "$OVERLORDADJ$ Russia"
- SOV_autonomy_puppet_DEF:0 "$OVERLORDADJ$ Russia"
- SOV_autonomy_reichskommissariat:0 "Reichskommissariat Russia"
- SOV_autonomy_reichskommissariat_DEF:0 "the Reichskommissariat Russia"
+ SOV_autonomy_dominion:0 "Pravdan Dominion"
+ SOV_autonomy_dominion_DEF:0 "the Pravdan Dominion"
+ SOV_autonomy_colony:0 "$OVERLORDADJ$ Pravda"
+ SOV_autonomy_colony_DEF:0 "the $OVERLORDADJ$ Pravda"
+ SOV_autonomy_integrated_puppet:0 "Pravdan Protectorate"
+ SOV_autonomy_integrated_puppet_DEF:0 "the Pravdan Protectorate"
+ SOV_autonomy_puppet:0 "$OVERLORDADJ$ Pravda"
+ SOV_autonomy_puppet_DEF:0 "$OVERLORDADJ$ Pravda"
+ SOV_autonomy_reichskommissariat:0 "Reichskommissariat pravda"
+ SOV_autonomy_reichskommissariat_DEF:0 "the Reichskommissariat Pravda"
  SOV_GER_fascism_autonomy_reichskommissariat:0 "Reichskommissariat Muscovien"
  SOV_GER_fascism_autonomy_reichskommissariat_DEF:0 "Reichskommissariat Muscovien"
- SOV_autonomy_reichsprotectorate:0 "Protectorate Russia"
- SOV_autonomy_reichsprotectorate_DEF:0 "the Protectorate of Russia"
- SOV_autonomy_wtt_imperial_protectorate:0 "Russian Imperial Protectorate"
- SOV_autonomy_wtt_imperial_protectorate_DEF:0 "the Imperial Protectorate of Russia"
- SOV_autonomy_supervised_state:0 "$OVERLORDADJ$ Mandate of Russia"
- SOV_autonomy_supervised_state_DEF:0 "the $OVERLORDADJ$ Mandate of Russia"
+ SOV_autonomy_reichsprotectorate:0 "Protectorate Pravda"
+ SOV_autonomy_reichsprotectorate_DEF:0 "the Protectorate of Pravda"
+ SOV_autonomy_wtt_imperial_protectorate:0 "Pravdan Imperial Protectorate"
+ SOV_autonomy_wtt_imperial_protectorate_DEF:0 "the Imperial Protectorate of Prabda"
+ SOV_autonomy_supervised_state:0 "$OVERLORDADJ$ Mandate of Pravda"
+ SOV_autonomy_supervised_state_DEF:0 "the $OVERLORDADJ$ Mandate of Pravda"
  SOV:0 "Pravda"
  SOV_DEF:0 "Pravda"
  SOV_ADJ:0 "Pravdaist"
- USA_fascism:0 "Saunders"
- USA_fascism_DEF:0 "Saunders"
+ USA_fascism:0 "Saunders Reich"
+ USA_fascism_DEF:0 "Saunders Reich"
  USA_democratic:0 "Saunders"
  USA_democratic_DEF:0 "Saunders"
  USA_neutrality:1 "Saunders"
  USA_neutrality_DEF:1 "Saunders"
- USA_communism:0 "Saunders"
- USA_communism_DEF:0 "Saunders"
+ USA_communism:0 "Peoples Republic of Saunders"
+ USA_communism_DEF:0 "Peoples Republic of Saunders"
  USA_fascism_ADJ:0 "Saunder"
  USA_democratic_ADJ:0 "Saunder"
  USA_neutrality_ADJ:0 "Saunder"
  USA_communism_ADJ:0 "Saunder"
- USA:0 "Saunders"
- USA_DEF:0 "Saunders"
- USA_ADJ:0 "Saunder"
- USA_democratic_subject:0 "$OVERLORDADJ$ North America"
- USA_democratic_subject_DEF:0 "$OVERLORDADJ$ North America"
- USA_neutrality_subject:0 "$OVERLORDADJ$ North American Territories"
- USA_neutrality_subject_DEF:0 "the $OVERLORDADJ$ North American Territories"
- USA_fascism_subject:0 "$OVERLORDADJ$ Protectorate of America"
- USA_fascism_subject_DEF:0 "the $OVERLORDADJ$ Protectorate of America"
- USA_communism_subject:0 "North American Socialist Republic"
- USA_communism_subject_DEF:0 "the North American Socialist Republic"
- SWE_fascism:0 "Viggen"
- SWE_fascism_DEF:0 "Viggen"
+ USA:0 "Yankees"
+ USA_DEF:0 "Yankees"
+ USA_ADJ:0 "Yankee"
+ USA_democratic_subject:0 "$OVERLORDADJ$ Saunders"
+ USA_democratic_subject_DEF:0 "$OVERLORDADJ$ Saunders"
+ USA_neutrality_subject:0 "$OVERLORDADJ$ Saunders Territories"
+ USA_neutrality_subject_DEF:0 "the $OVERLORDADJ$ Saunders Territories"
+ USA_fascism_subject:0 "$OVERLORDADJ$ Protectorate of Saunders"
+ USA_fascism_subject_DEF:0 "the $OVERLORDADJ$ Protectorate of Suanders"
+ USA_communism_subject:0 "Saunders Socialist Republic"
+ USA_communism_subject_DEF:0 "the Saunders Socialist Republic"
+ SWE_fascism:0 "Greater Viggen"
+ SWE_fascism_DEF:0 "Greater Viggen"
  SWE_democratic:0 "Viggen"
  SWE_democratic_DEF:0 "Viggen"
  SWE_neutrality:0 "Viggen"
  SWE_neutrality_DEF:0 "Viggen"
- SWE_communism:0 "Viggen"
- SWE_communism_DEF:0 "Viggen"
- SWE_fascism_ADJ:0 "Viggen"
+ SWE_communism:0 "Soviet Viggen"
+ SWE_communism_DEF:0 "Soviet Viggen"
+ SWE_fascism_ADJ:0 "Great Viggen"
  SWE_democratic_ADJ:0 "Viggen"
  SWE_neutrality_ADJ:0 "Viggen"
- SWE_communism_ADJ:0 "Viggen"
+ SWE_communism_ADJ:0 "Viggen Republic"
  SWE:0 "Viggen"
  SWE_DEF:0 "Viggen"
  SWE_ADJ:0 "Viggen"
  SWE_subject:0 "$OVERLORDADJ$ $SWE$"
  SWE_subject_DEF:0 "$OVERLORDADJ$ $SWE$"
- FRA_fascism:2 "BC Freedom"
- FRA_fascism_DEF:2 "BC Freedom"
+ FRA_fascism:2 "Maginot"
+ FRA_fascism_DEF:2 "Maginot"
  FRA_democratic:0 "BC Freedom"
  FRA_democratic_DEF:0 "BC Freedom"
  FRA_neutrality:0 "BC Freedom"
  FRA_neutrality_DEF:0 "BC Freedom"
- FRA_communism:0 "BC Freedom"
- FRA_communism_DEF:0 "BC Freedom"
+ FRA_communism:0 "Peoples Republic of BC Freedom"
+ FRA_communism_DEF:0 "Peoples Republic of BC Freedom"
  FRA_fascism_ADJ:2 "BC"
  FRA_democratic_ADJ:0 "BC"
  FRA_neutrality_ADJ:0 "BC"
- FRA_communism_ADJ:0 "BC"
+ FRA_communism_ADJ:0 "PRBC"
  FRA:0 "BC Freedom"
  FRA_DEF:0 "BC Freedom"
  FRA_ADJ:0 "BC"
