--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -7,12 +7,12 @@
  MAL_subject:0 "$OVERLORDADJ$ Malaya"
  LBA_subject:0 "$OVERLORDADJ$ North Africa"
  SAU_subject:0 "$OVERLORDADJ$ Central Arabia"
- MAL_UK_democratic:0 "British Malaya"
- MAL_UK_democratic_DEF:0 "British Malaya"
- RAJ_UK_democratic:0 "British Raj"
- RAJ_UK_democratic_DEF:0 "the British Raj"
- RAJ_UK_neutrality:0 "British Raj"
- RAJ_UK_neutrality_DEF:0 "the British Raj"
+ MAL_UK_democratic:0 "Gloriana Malaya"
+ MAL_UK_democratic_DEF:0 "Gloriana Malaya"
+ RAJ_UK_democratic:0 "Gloriana Raj"
+ RAJ_UK_democratic_DEF:0 "the"Gloriana Raj"
+ RAJ_UK_neutrality:0 "Gloriana Raj"
+ RAJ_UK_neutrality_DEF:0 "the"Gloriana Raj"
  RAJ_UK_subject:0 "$OVERLORDADJ$ Raj"
  RAJ_UK_autonomy_dominion:0 "Dominion of India"
  RAJ_UK_autonomy_dominion_DEF:0 "the Dominion of India"
@@ -28,11 +28,11 @@
  CAN_UK_autonomy_integrated_puppet_DEF:0 "Maple"
  USA_UK_autonomy_dominion:0 "Dominion of North America"
  USA_UK_autonomy_colony:0 "48 Colonies"
- USA_UK_autonomy_puppet:0 "British North American Territories"
+ USA_UK_autonomy_puppet:0 "Gloriana North American Territories"
  USA_UK_autonomy_integrated_puppet:0 "King George's Land"
  USA_UK_autonomy_dominion_DEF:0 "the Dominion of North America"
  USA_UK_autonomy_colony_DEF:0 "the 48 Colonies"
- USA_UK_autonomy_puppet_DEF:0 "the British North American Territories"
+ USA_UK_autonomy_puppet_DEF:0 "the"Gloriana North American Territories"
  USA_UK_autonomy_integrated_puppet_DEF:0 "King George's Land"
  USA_SAF_EDW_autonomy_dominion:0 "Dominion of North America"
  USA_SAF_EDW_autonomy_colony:0 "48 Colonies"
@@ -186,28 +186,28 @@
  ETH_ethiopian_federation_democratic_DEF:0 "the Federation of Ethiopia"
  KEN_ENG_autonomy_dominion:0 "Dominion of Kenya"
  KEN_ENG_autonomy_colony:0 "Colony of Kenya"
- KEN_ENG_autonomy_puppet:0 "British Kenya"
- KEN_ENG_autonomy_integrated_puppet:0 "British East Africa"
+ KEN_ENG_autonomy_puppet:0 "Gloriana Kenya"
+ KEN_ENG_autonomy_integrated_puppet:0 "Gloriana East Africa"
  ZIM_ENG_autonomy_dominion:0 "Dominion of Rhodesia"
  ZIM_ENG_autonomy_colony:0 "Colony of Rhodesia"
- ZIM_ENG_autonomy_puppet:0 "British Rhodesia"
- ZIM_ENG_autonomy_integrated_puppet:0 "British SAC Territory"
+ ZIM_ENG_autonomy_puppet:0 "Gloriana Rhodesia"
+ ZIM_ENG_autonomy_integrated_puppet:0 "Gloriana SAC Territory"
  BOT_ENG_autonomy_dominion:0 "Dominion of Botswana"
  BOT_ENG_autonomy_colony:0 "Colony of Bechuanaland"
  BOT_ENG_autonomy_puppet:0 "Bechuanaland Protectorate"
- BOT_ENG_autonomy_integrated_puppet:0 "British Bechuanaland"
+ BOT_ENG_autonomy_integrated_puppet:0 "Gloriana Bechuanaland"
  KEN_ENG_autonomy_dominion_DEF:0 "the Dominion of Kenya"
  KEN_ENG_autonomy_colony_DEF:0 "the Colony of Kenya"
- KEN_ENG_autonomy_puppet_DEF:0 "British Kenya"
- KEN_ENG_autonomy_integrated_puppet_DEF:0 "British East Africa"
+ KEN_ENG_autonomy_puppet_DEF:0 "Gloriana Kenya"
+ KEN_ENG_autonomy_integrated_puppet_DEF:0 "Gloriana East Africa"
  ZIM_ENG_autonomy_dominion_DEF:0 "the Dominion of Rhodesia"
  ZIM_ENG_autonomy_colony_DEF:0 "the Colony of Rhodesia"
- ZIM_ENG_autonomy_puppet_DEF:0 "British Rhodesia"
- ZIM_ENG_autonomy_integrated_puppet_DEF:0 "the British SAC Territory"
+ ZIM_ENG_autonomy_puppet_DEF:0 "Gloriana Rhodesia"
+ ZIM_ENG_autonomy_integrated_puppet_DEF:0 "the"Gloriana SAC Territory"
  BOT_ENG_autonomy_dominion_DEF:0 "the Dominion of Botswana"
  BOT_ENG_autonomy_colony_DEF:0 "the Colony of Bechuanaland"
  BOT_ENG_autonomy_puppet_DEF:0 "the Bechuanaland Protectorate"
- BOT_ENG_autonomy_integrated_puppet_DEF:0 "British Bechuanaland"
+ BOT_ENG_autonomy_integrated_puppet_DEF:0 "Gloriana Bechuanaland"
  HOL_GER_fascism_autonomy_reichskommissariat:0 "Reichskommissariat Niederlande"
  HOL_GER_fascism_autonomy_reichsprotectorate:0 "Reichsprotektorat Niederlande"
  HOL_GER_fascism_autonomy_satellite:0 "Dietsland"
@@ -248,14 +248,14 @@
  POL_GER_fascism_autonomy_reichsprotectorate:1 "The Generalgouvernement"
  FRA_FREE_democratic:0 "BC France"
  FRA_FREE_democratic_DEF:0 "BC France"
- FRA_VICHY_fascism:0 "Vichy Freedom"
- FRA_VICHY_fascism_DEF:0 "Vichy Freedom"
+ FRA_VICHY_fascism:0 "Maginot Freedom"
+ FRA_VICHY_fascism_DEF:0 "Maginot Freedom"
  FRA_VICHY_neutrality:0 "Oshida Freedom"
  FRA_VICHY_neutrality_DEF:0 "Oshida Freedom"
- FRA_GER_fascism_autonomy_reichsprotectorate:0 "Vichy Freedom"
- FRA_GER_fascism_autonomy_reichsprotectorate_DEF:0 "Vichy Freedom"
- FRA_GER_fascism_autonomy_puppet:0 "Vichy Freedom"
- FRA_GER_fascism_autonomy_puppet_DEF:0 "Vichy Freedom"
+ FRA_GER_fascism_autonomy_reichsprotectorate:0 "Maginot Freedom"
+ FRA_GER_fascism_autonomy_reichsprotectorate_DEF:0 "Maginot Freedom"
+ FRA_GER_fascism_autonomy_puppet:0 "Maginot Freedom"
+ FRA_GER_fascism_autonomy_puppet_DEF:0 "Maginot Freedom"
  FRA_UK_democratic:0 "BC-Gloriana Union"
  FRA_UK_democratic_DEF:0 "the BC-Gloriana Union"
  FRA_UK_fascism:0 "Restored Norman Empire"
@@ -1473,7 +1473,7 @@
  SWI_ITA_puppet_democratic_DEF:0 "Repubblica Svizzera"
  SWI_ITA_puppet_democratic_ADJ:0 "Swiss"
  SWI_ENG_puppet_democratic:0 "Alpine Territories"
- SWI_ENG_puppet_democratic_DEF:0 "British Alpine Territories"
+ SWI_ENG_puppet_democratic_DEF:0 "Gloriana Alpine Territories"
  SWI_ENG_puppet_democratic_ADJ:0 "Alpine"
 
  SWI_GER_puppet_fascism:0 "Schweizerische Reichsprotektorat"
@@ -1485,8 +1485,8 @@
  SWI_ITA_puppet_fascism:0 "Protettorato Svizzero"
  SWI_ITA_puppet_fascism_DEF:0 "Protettorato Svizzero"
  SWI_ITA_puppet_fascism_ADJ:0 "Swiss"
- SWI_ENG_puppet_fascism:0 "British Alpine Territories"
- SWI_ENG_puppet_fascism_DEF:0 "the British Alpine Territories"
+ SWI_ENG_puppet_fascism:0 "Gloriana Alpine Territories"
+ SWI_ENG_puppet_fascism_DEF:0 "the"Gloriana Alpine Territories"
  SWI_ENG_puppet_fascism_ADJ:0 "Alpine"
  SWI_SOV_puppet_communism:0 "Swiss Union"
  SWI_SOV_puppet_communism_DEF:0 "the Union of Swiss Socialist Republics"
