--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -79,8 +79,8 @@
  SOV:0 "Pravda"
  SOV_DEF:0 "Pravda"
  SOV_ADJ:0 "Pravdaist"
- USA_fascism:0 "Saunders Reich"
- USA_fascism_DEF:0 "Saunders Reich"
+ USA_fascism:0 "All Stars"
+ USA_fascism_DEF:0 "All Stars"
  USA_democratic:0 "Saunders"
  USA_democratic_DEF:0 "Saunders"
  USA_neutrality:1 "Saunders"
@@ -98,8 +98,8 @@
  USA_democratic_subject_DEF:0 "$OVERLORDADJ$ Saunders"
  USA_neutrality_subject:0 "$OVERLORDADJ$ Saunders Territories"
  USA_neutrality_subject_DEF:0 "the $OVERLORDADJ$ Saunders Territories"
- USA_fascism_subject:0 "$OVERLORDADJ$ Protectorate of Saunders"
- USA_fascism_subject_DEF:0 "the $OVERLORDADJ$ Protectorate of Suanders"
+ USA_fascism_subject:0 "$OVERLORDADJ$ Protectorate of All Stars"
+ USA_fascism_subject_DEF:0 "the $OVERLORDADJ$ Protectorate of All Stars"
  USA_communism_subject:0 "Saunders Socialist Republic"
  USA_communism_subject_DEF:0 "the Saunders Socialist Republic"
  SWE_fascism:0 "Greater Viggen"
@@ -248,10 +248,10 @@
  LIT_fascism_DEF:0 "Lietuva"
  LIT_democratic:0 "Republic of Litua"
  LIT_democratic_DEF:0 "the Republic of Litua"
- LIT_neutrality:0 "Lithuania"
- LIT_neutrality_DEF:0 "Lithuania"
- LIT_communism:1 "Lithuanian People's Republic"
- LIT_communism_DEF:1 "the Lithuanian People's Republic"
+ LIT_neutrality:0 "Litua"
+ LIT_neutrality_DEF:0 "Litua"
+ LIT_communism:1 "Litua People's Republic"
+ LIT_communism_DEF:1 "the Litua People's Republic"
  LIT_fascism_ADJ:0 "Lithuanian"
  LIT_democratic_ADJ:0 "Lithuanian"
  LIT_neutrality_ADJ:0 "Lithuanian"
@@ -265,8 +265,8 @@
  EST_fascism_DEF:1 "Hestia"
  EST_democratic:0 "Republic of Livonia"
  EST_democratic_DEF:0 "the Republic of Livonia"
- EST_neutrality:0 "Estonia"
- EST_neutrality_DEF:0 "Estonia"
+ EST_neutrality:0 "Hestia"
+ EST_neutrality_DEF:0 "Hestia"
  EST_communism:1 "Estonian People's Republic"
  EST_communism_DEF:1 "the Estonian People's Republic"
  EST_fascism_ADJ:0 "Estonum"
@@ -282,10 +282,10 @@
  LAT_fascism_DEF:1 "Thunder Cross Livland"
  LAT_democratic:0 "Republic of Livland"
  LAT_democratic_DEF:0 "the Republic of Livland"
- LAT_neutrality:0 "Latvia"
- LAT_neutrality_DEF:0 "Latvia"
- LAT_communism:1 "Latvian People's Republic"
- LAT_communism_DEF:1 "the Latvian People's Republic"
+ LAT_neutrality:0 "Livland"
+ LAT_neutrality_DEF:0 "Livland"
+ LAT_communism:1 "Livland People's Republic"
+ LAT_communism_DEF:1 "the Livland People's Republic"
  LAT_fascism_ADJ:0 "Latvian"
  LAT_democratic_ADJ:0 "Latvian"
  LAT_neutrality_ADJ:0 "Latvian"
@@ -316,8 +316,8 @@
  ITA_fascism_DEF:0 "Anzio"
  ITA_democratic:0 "Anzio"
  ITA_democratic_DEF:0 "Anzio"
- ITA_neutrality:0 "Anzio"
- ITA_neutrality_DEF:0 "Anzio"
+ ITA_neutrality:0 "Anzio State"
+ ITA_neutrality_DEF:0 "Anzio State"
  ITA_communism:0 "Peoples Republic of Anzio"
  ITA_communism_DEF:0 "Peoples Republic of Anzio"
  ITA_fascism_ADJ:0 "Anzio"
@@ -346,27 +346,27 @@
  ROM_ADJ:0 "Romanian"
  ROM_subject:0 "$OVERLORDADJ$ $ROM$"
  ROM_subject_DEF:0 "$OVERLORDADJ$ $ROM$"
- YUG_fascism:0 "Radikalna Yugoslavia"
- YUG_fascism_DEF:0 "Radikalna Yugoslavia"
- YUG_democratic:0 "Yugoslavian Confederation"
- YUG_democratic_DEF:0 "the Yugoslavian Confederation"
- YUG_neutrality:0 "Yugoslavia"
- YUG_neutrality_DEF:0 "Yugoslavia"
- YUG_communism:0 "SFR Yugoslavia"
- YUG_communism_DEF:0 "SFR Yugoslavia"
- YUG_fascism_ADJ:0 "Yugoslavian"
- YUG_democratic_ADJ:0 "Yugoslavian"
- YUG_neutrality_ADJ:0 "Yugoslavian"
- YUG_communism_ADJ:0 "Yugoslavian"
- YUG:0 "Yugoslavia"
- YUG_DEF:0 "Yugoslavia"
- YUG_ADJ:0 "Yugoslavian"
+ YUG_fascism:0 "Radikalna Brazava"
+ YUG_fascism_DEF:0 "Radikalna Brazava"
+ YUG_democratic:0 "Brazava Confederation"
+ YUG_democratic_DEF:0 "the Brazava Confederation"
+ YUG_neutrality:0 "Brazava"
+ YUG_neutrality_DEF:0 "Brazava"
+ YUG_communism:0 "SFR Brazava"
+ YUG_communism_DEF:0 "SFR Brazava"
+ YUG_fascism_ADJ:0 "Brazava"
+ YUG_democratic_ADJ:0 "Brazavan"
+ YUG_neutrality_ADJ:0 "Brazavan"
+ YUG_communism_ADJ:0 "Brazavan"
+ YUG:0 "Brazava"
+ YUG_DEF:0 "Brazava"
+ YUG_ADJ:0 "Brazavan"
  YUG_subject:0 "$OVERLORDADJ$ $YUG$"
  YUG_subject_DEF:0 "$OVERLORDADJ$ $YUG$"
  SWI_fascism:1 "Imperial Helvetia"
  SWI_fascism_DEF:1 "the Imperial Helvetic Confederation"
  SWI_democratic:0 "Neutrality Republic"
- SWI_democratic_DEF:1 "the Swiss Confederation"
+ SWI_democratic_DEF:1 "the Neutrality Confederation"
  SWI_neutrality:1 "Helvetic Junta"
  SWI_neutrality_DEF:1 "The Helvetic Junta"
  SWI_communism:0 "United Cantons"
@@ -399,14 +399,14 @@
  TUR_ADJ:0 "Turkish"
  TUR_subject:0 "$OVERLORDADJ$ $TUR$"
  TUR_subject_DEF:0 "$OVERLORDADJ$ $TUR$"
- GRE_fascism:0 "Hellenic State"
- GRE_fascism_DEF:0 "the Hellenic State"
- GRE_democratic:0 "Spartan Republic"
- GRE_democratic_DEF:0 "the Spartan Republic"
+ GRE_fascism:0 "Spartan State"
+ GRE_fascism_DEF:0 "the Spartan State"
+ GRE_democratic:0 "Hoplite Republic"
+ GRE_democratic_DEF:0 "the Hoplite Republic"
  GRE_neutrality:0 "Kingdom of Hoplite"
  GRE_neutrality_DEF:0 "the Kingdom of Hoplite"
- GRE_communism:0 "Provisional Democratic Greece"
- GRE_communism_DEF:0 "Provisional Democratic Greece"
+ GRE_communism:0 "Provisional Democratic Hoplite"
+ GRE_communism_DEF:0 "Provisional Democratic Hoplite"
  GRE_fascism_ADJ:0 "Hellenic"
  GRE_democratic_ADJ:0 "Hellenic"
  GRE_neutrality_ADJ:0 "Greek"
@@ -473,8 +473,8 @@
  BUL_fascism_DEF:0 "Yogurt Empire"
  BUL_democratic:0 "Yogurt"
  BUL_democratic_DEF:0 "Yogurt"
- BUL_neutrality:0 "Yogurt"
- BUL_neutrality_DEF:0 "Yogurt"
+ BUL_neutrality:0 "Kingdom of Yogurt"
+ BUL_neutrality_DEF:0 "Kingdom of Yogurt"
  BUL_communism:0 "Soviet Yogurt"
  BUL_communism_DEF:0 "Soviet Yogurt"
  BUL_fascism_ADJ:0 "Yogurt"
@@ -520,37 +520,37 @@
  FIN_ADJ:0 "Jatkosota"
  FIN_subject:0 "$OVERLORDADJ$ $FIN$"
  FIN_subject_DEF:0 "$OVERLORDADJ$ $FIN$"
- IRE_fascism:0 "Resurrectionist Ireland"
- IRE_fascism_DEF:0 "Resurrectionist Ireland"
- IRE_democratic:0 "Ireland"
- IRE_democratic_DEF:0 "Ireland"
- IRE_neutrality:0 "Free Ireland"
- IRE_neutrality_DEF:0 "Free Ireland"
- IRE_communism:0 "Irish People's Union"
- IRE_communism_DEF:0 "the Irish People's Union"
+ IRE_fascism:0 "Resurrectionist Guinness"
+ IRE_fascism_DEF:0 "Resurrectionist Guinness"
+ IRE_democratic:0 "Guiness"
+ IRE_democratic_DEF:0 "Guinness"
+ IRE_neutrality:0 "Free Guinness"
+ IRE_neutrality_DEF:0 "Free Guinness"
+ IRE_communism:0 "Guinness People's Union"
+ IRE_communism_DEF:0 "the Guinness People's Union"
  IRE_fascism_ADJ:0 "Irish"
  IRE_democratic_ADJ:0 "Irish"
  IRE_neutrality_ADJ:0 "Irish"
  IRE_communism_ADJ:0 "Irish"
- IRE:0 "Ireland"
- IRE_DEF:0 "Ireland"
+ IRE:0 "Guinness"
+ IRE_DEF:0 "Guinness"
  IRE_ADJ:0 "Irish"
  IRE_subject:0 "$OVERLORDADJ$ $IRE$"
  IRE_subject_DEF:0 "$OVERLORDADJ$ $IRE$"
  HUN_fascism:0 "Magyarorszag"
- HUN_fascism_DEF:0 "Hungary"
- HUN_democratic:0 "Republic of Hungary"
- HUN_democratic_DEF:0 "the Republic of Hungary"
- HUN_neutrality:0 "Kingdom of Hungary"
- HUN_neutrality_DEF:1 "the Kingdom of Hungary"
- HUN_communism:0 "Hungarian People's Republic"
- HUN_communism_DEF:0 "the Hungarian People's Republic"
+ HUN_fascism_DEF:0 "Magyarorszag"
+ HUN_democratic:0 "Republic of Turul"
+ HUN_democratic_DEF:0 "the Republic of Turul"
+ HUN_neutrality:0 "Kingdom of Turul"
+ HUN_neutrality_DEF:1 "the Kingdom of Turul"
+ HUN_communism:0 "Goulash People's Republic"
+ HUN_communism_DEF:0 "the Goulash People's Republic"
  HUN_fascism_ADJ:0 "Hungarian"
  HUN_democratic_ADJ:0 "Hungarian"
  HUN_neutrality_ADJ:0 "Hungarian"
  HUN_communism_ADJ:0 "Hungarian"
  HUN:0 "Hungary"
- HUN_DEF:0 "Hungary"
+ HUN_DEF:0 "Turul"
  HUN_ADJ:0 "Hungarian"
  HUN_subject:0 "$OVERLORDADJ$ $HUN$"
  HUN_subject_DEF:0 "$OVERLORDADJ$ $HUN$"
