--- a/localisation/english/focus_l_english.yml
+++ b/localisation/english/focus_l_english.yml
@@ -2418,7 +2418,7 @@
  HUN_dockyards:0 "Renew the Shipping Industry"
  HUN_dockyards_desc:0 "With our sights set firmly on the restoration of our borders, we must begin the task of developing a Mediterranean fleet to rival our past glories."
 
-# Update
+# Update #
  GER_open_borders_desc:0 "Kuromorimine has kept the gates closed for too long and our rapidly growing school needs all the brilliant minds it could get. It'll help us in the long run. "
  GER_free_movement_desc:0 "As well as getting in, the students want to transfer to other schools if they don't like how we run the school, they should be free to go to other schools if they may please and they should be allowed to come back if they want to visit. We have to keep the growth going by collaborating with other schools."
  GER_economic_collab_desc:0 "With the students collaborating, it's time we collaborate with economics too. Every school should get the best of our benefits and we can push forward for our identity as one. Change Economy mode to Free Trade"
@@ -2426,3 +2426,5 @@
  GER_ethics_group_desc:0 "ComKuromorimine needs to take the students needs seriously. After the incident regarding last year with  Miho and Erika we need to make sure they don't happen again. An Ethics committee should fix the mistakes of the past."
  GER_centeral_parlament_desc:0 "The final steps to unifying all of the schools lie ahead but another obstacle remains, the parliaments of the schools are spread out with their own laws, if we are to keep them united and achieve the dream we want, we have to make a central parliament to make sure our dreams aren't wasted."
  GER_united_europe_desc:0 "Now everything has been finalized and we can push forward that we aren't ones for the school but rather ones for the people. This alliance will make us one of the most powerful sets of schools ever, it may even rock the boat into another direction." 
+
+#Reach out Focus part KURO#
