--- a/localisation/english/focus_l_english.yml
+++ b/localisation/english/focus_l_english.yml
@@ -2441,3 +2441,15 @@
  GER_rearm_garrisons_desc:0 "Student Brigades were used to guard the school during the days of Manami and Runa but have been abolished under Erika due to their disloyalty to her. Bringing these brigades back will help guard the school from future threats."
  GER_fund_police:0 "Funding Disciplinary Force"
  GER_fund_police_desc:0 "Students can't guard Kuromorimine alone, we have to deal with matters outside of the school. A dedicated police team would help the students out so they didn't have to keep watch all the time and they can get back to learning."
+
+# constitutional monarchy stuff
+ GER_reach_out:0 "End Isolation"
+ GER_reach_out_desc:0 "Kuromorimine has been isolated since the defeat of the 61st Sensha-Do tournament. We should try making friends peacefully if we are to avoid another catostrophic war."
+ GER_protect_german_products:0 "Kuromorimine poduction protection"
+ GER_protect_german_products_desc:0 "Kuromorimine has taken out a significant portion of money in loans to help try building up the economy and our products are being sold as payment to repay its debt. We need to focus on our own people first if we are to pay them back later."
+ GER_cooperative_diplomacy:0 "Act together, think together"
+ GER_cooperative_diplomacy_desc:0 "With like minded minds out there, Kuromorimine could try figuring out what to do if it means we are to survive. It's best to make friends and not enemies as the old saying goes. The days of aggression are numbered"
+ GER_political_connections:0 "The Great Meeting"
+ GER_political_connections_desc:0 "Kuromorimine needs to reform the internal system if it means we have a future. We'll invite the best people from the other schools to settle manners of how the new reforms would play out. If everything goes well, we can use this meeting to help reform the system."
+ GER_consitutional_monarchy:0 "Koume's Consitutional Kaiserriech"
+ GER_consitutional_monarchy_desc:0 "While many wish to maintain a strict republic, the people have spoken and all wish to see Koume as Kaiser of our nation, whilst maintaining the parlimentary system we fought so hard for"
