--- a/localisation/english/focus_l_english.yml
+++ b/localisation/english/focus_l_english.yml
@@ -2471,8 +2471,8 @@ GER_reform_wave:0 "Reform Wave"
  GER_liberalized_dicatorship:0 "Authoritarian Republicanism"
  GER_liberalized_dicatorship_desc:0 "Where Maho and Erika went wrong, was their complete delusion in our superiority and quashing of any talk of elections, we must not follow in their footsteps and maintain a strong goverment to protect the people"
 
- GER_anzai_plan:0 "Placeholder"
- GER_anzai_plan_desc:0 "Placeholder"
+ GER_anzai_plan:0 "Pepperoni Economics"
+ GER_anzai_plan_desc:0 "Traditional Authoritarian Economics have failed, we need radical change to move more in line with realistic economic thoughts, Saori has been a long admirer of Pepperoni, and her Ideas about Economic Thought, and we shall implent them"
 
  GER_social_welfare:0 "Wellfare State"
  GER_social_welfare_desc:0 "Not everyone is as rich as a Kuromorimine Queen so helping the welfare of the poorer students is the top priority. Everyone needs a place to stay if we are to remain stable."
